Select: fixed select element z-index

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -19,7 +19,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    z-index: 2;
+    z-index: 3;
     font-size: 16px;
     }
 
